@@ -27,6 +27,7 @@ LATEX_WARNINGS = ENV_WARNINGS + """\
 %(root)s/markup.txt:158: WARNING: unknown option: &option
 %(root)s/footnote.txt:60: WARNING: citation not found: missing
 %(root)s/images.txt:20: WARNING: no matching candidate for image URI u'foo.\\*'
+%(root)s/markup.txt:269: WARNING: Could not parse literal_block as "c". highlighting skipped.
 """
 
 if PY3:
