@@ -12,6 +12,7 @@ Bugs fixed
 * #2243: Ignore strange docstring types for classes, do not crash
 * #2247: Fix #2205 breaks make html for definition list with classifiers
   that contains regular-expression like string
+* #1565: Show warning if Pygments throws an ErrorToken
 
 Release 1.3.4 (released Jan 12, 2016)
 =====================================
